--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,18 +6,23 @@
             {% elsif page.title.size > 0 %}{{ page.title }} | {{ site.title }}
             {$ else }{{ page.name }}
         </title>
-        <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
+        <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/style.css" />
     </head>
-    <header>
-        <p>This is the header</p>
-    </header>
+    
     <body>
-        <div class="body">
+        
+        <header>
+            <p>This is the header</p>
+        </header>
+        
+        <main>
          {{ content }}
-        </div>
+        </main>
+        
+        <footer>
+            <p>Und das ist die Fußzeile</p>
+        </footer>
     </body>
     
-    <footer>
-        <p>Und das ist die Fußzeile</p>
-    </footer>
+    
 </html>
