--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,11 +1,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>
-            {% if page.fullTitle.size > 0 %}{{ page.fullTitle }}
-            {% elsif page.title.size > 0 %}{{ page.title }} | {{ site.title }}
-            {% else %}{{ page.name }}
-        </title>
+        <title>{% if page.title %}{{ page.title }} – {% endif %}{{ site.name }} – {{ site.description }}</title>
         <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/style.css" />
     </head>
     
