--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,6 +12,7 @@
         </header>
         
         <main>
+            <p>Note: This site literally just finished compiling. It's bound to be broken af 'til it's fixed</p>
          {{ content }}
         </main>
         
