--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
     <head>
         <meta charset="utf-8">
         <title>{% if page.title %}{{ page.title }} – {% endif %}{{ site.name }} – {{ site.description }}</title>
-        <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/style.css" />
+        <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/assets/css/style.css" />
     </head>
     
     <body>
