--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -3,6 +3,7 @@
 
 @import "{{ site.theme }}";
 
-p{
-    background-color:red !important;
+// Debugging help: !important may be necessary to override stuff defined in the site theme.
+.center{
+    text-align:center;   
 }
