bug fixes (it actually works now), .gemspec is apparently unnecessary.

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,6 +1,14 @@
+---
+---
 @import "{{ site.theme }}";
+
+$linkHover: pink;
 
 // Debugging help: !important may be necessary to override stuff defined in the site theme.
 .center{
     text-align:center;   
+}
+
+a:hover{
+    color: $linkHover;
 }
