Bug fixes, better footer, better CSS, layout improvements, feeds

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,6 +5,11 @@
                 <h5 class = "white-text">Meta</h5>
                 <p class = "grey-text text-lighten-4">This site uses <a href = "https://materializecss.com/" rel = "nofollow noreferrer">materialize</a>.</p>
             </div>
+            <div class="col l4 s12">
+                <h5>Social media</h5>
+                {% include socialmedia.html %}
+
+            </div>
         </div>
         
         <div class="footer-copyright">
@@ -14,6 +19,6 @@
         </div>
     </div>
 </footer>
-<script type="text/javascript" src="assets/css/materialize/js/bin/materialize.min.js"></script>
+<script type="text/javascript" src="/assets/css/materialize/js/bin/materialize.min.js"></script>
 
-<script type="text/javascript" src="assets/js/functions.js"></script>
+<script type="text/javascript" src="/assets/js/functions.js"></script>
