--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,9 @@
         {% include header.html %}
         
         <main>
-         {{ content }}
+            <div class="container">
+                {{content}}
+            </div>
         </main>
         
         {% include footer.html %}
