SEO, more content, prepare for merging with master (add GH compatibility)

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,4 +15,5 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
     {% feed_meta %}
+    {% seo %}
 </head>
