--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,10 +2,10 @@
 layout: default
 ---
 <div class="post-container">
-	<h1 class="spacing">{{ page.title }}</h1>
+	<h1>{{ page.title }}</h1>
 
-	<div class="blog-post spacing">
-		<p class="category">Posted on <span class="date">{{ page.date | date: '%d %B, %Y' }}</span></p>
+	<div class="blog-post">
+		<p class="meta grey-text">Posted on <span class="date">{{ page.date | date: '%d %B, %Y' }}</span></p>
 		{{ content }}
 	</div>
 </div>
