Fixed footer design bug, added fallback description

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,7 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"/>
     <meta http-equiv = "Content-language" content = "en-US"/>
-    <meta name="description" content = "{% if page.description %}{{page.description}}{% endif %}"/>
+    <meta name="description" content = "{% if page.description %}{{page.description}}{% else %}An awesome page on my website!{% endif %}"/>
     
     <!-- Visible metadata -->
     <title>{% if page.title %}{{ page.title }} | {% endif %}{{ site.name }}</title>
