--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,13 +6,13 @@
             <ul id="nav-mobile" class="right hide-on-med-and-down">
                 <li><a href="/index.html">Home</a></li>
                 <li><a href="/kb.html">Knowledge base</a></li>
+                <li><a href="/emojis.html">Emoji reference</a></li>
             </ul>
         </div>
         <ul class="sidenav" id = "mobile-nav">
             <li><a href="/index.html">Home</a></li>
             <li><a href="/kb.html">Knowledge base</a></li>
+            <li><a href="/emojis.html">Emoji reference</a></li>
         </ul>
     </nav>
-
-
 </header>
