--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,15 +5,15 @@
             <a href="#" data-target="mobile-nav" class="sidenav-trigger"><i class="material-icons">menu</i></a>
             <ul id="nav-mobile" class="right hide-on-med-and-down">
                 <li><a href="/index.html">Home</a></li>
-                <li><a href="/kb.html">Knowledge base</a></li>
+                <li><a href="/posts/">Blog</a></li>
                 <li><a href="/emojis.html">Emoji reference</a></li>
             </ul>
         </div>
         <ul class="sidenav" id = "mobile-nav">
             <li><a href="/index.html">Home</a></li>
-            <li><a href="/kb.html">Knowledge base</a></li>
+            <li><a href="/posts/">Blog</a></li>
             <li><a href="/emojis.html">Emoji reference</a></li>
         </ul>
     </nav>
 </header>
->>>>>>> 4136d45d3e8ab604fc7481a884eb1375052134b6
+
