--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,7 @@
 <footer class="page-footer">
     <div class="footer-copyright">
-        <div class="container">
+        <div class="container" style="overflow: auto;">
+            &copy; Olivia Zoe, 2019 (<a href="https://github.com/LunarWatcher/lunarwatcher.github.io/blob/master/LICENSE">license</a>)
             <p class="right">Powered by <a href="https://jekyllrb.com/">Jekyll</a></p>
         </div>
     </div>
