--- a/_includes/socialmedia.html
+++ b/_includes/socialmedia.html
@@ -1,4 +1,4 @@
-<ul id="social-media">
+<ul id="social-media" class="heart">
 {% if site.discord-server %} <li><a href="https://discord.gg/{{site.discord-server | cgi_escape | escape }}">Discord server</a></li>{% endif %}
 {% if site.discord-username %} <li>Discord username: {{site.discord-username}}</li>{% endif %}
 {% if site.facebook %} <li><a href="https://facebook.com/{{site.facebook | cgi_escape | escape }}">Facebook</a></li>{% endif %}
@@ -9,4 +9,5 @@
 {% if site.deviantart %} <li><a href="https://{{site.deviantart | cgi_escape | escape}}.deviantart.com">Deviantart</a></li>{% endif %}
 {% if site.keybase %} <li><a href="https://keybase.io/{{site.keybase | cgi_escape | escape}}">Keybase</a></li>{% endif %}
 {% if site.email %} <li>Email: <a href="mailto:{{site.email | cgi_escape | escape}}">{{site.email}}</a></li>{% endif %}
+{% if site.picarto %} <li><a href="https://picarto.tv/{{site.picarto | cgi_escape | escape}}">Picarto</a></li>{% endif %}
 </ul>
