--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,4 +8,17 @@ layout: default
 		<p class="meta grey-text">Posted on <span class="date">{{ page.date | date: '%d %B, %Y' }}</span></p>
 		{{ content }}
 	</div>
+	
+	{% if comments %}
+        <div class="comments">
+            <script src="https://utteranc.es/client.js"
+                    repo="LunarWatcher/lunarwatcher.github.io"
+                    issue-term="pathname"
+                    label="comments"
+                    theme="github-light"
+                    crossorigin="anonymous"
+                    async>
+            </script>
+        </div>
+	{% endif %}
 </div>
