Nuke SE, nuke materialize, publish blog post, prettify page, accessbility

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,8 +3,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"/>
-    <meta http-equiv = "Content-language" content = "en-US"/>
-    <meta name="description" content = "{% if page.description %}{{page.description}}{% else %}An awesome page on my website!{% endif %}"/>
+    <meta http-equiv="Content-language" content = "en-US"/>
+    <meta name="description" content = "{%- if page.description -%}{{page.description}}{%- else -%}An awesome page on my website!{%- endif -%}"/>
     
     <!-- Visible metadata -->
     <title>{% if page.title %}{{ page.title }} | {% endif %}{{ site.name }}</title>
@@ -14,6 +14,6 @@
     <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/assets/css/style.css" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
-    {% feed_meta %}
-    {% seo %}
+    {%- feed_meta -%}
+    {%- seo -%}
 </head>
