--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,10 +4,10 @@
             <h1 class="logo left"><a href="/">Olivia</a></h1>
             <div id="sidenav" class="sidenav">
                 <a href="javascript:void(0)" class="close" onclick="closeSidenav()">&times;</a>
-                {% include nav.html %}
+                {%- include nav.html -%}
             </div>
             <div class="topnav right">
-                {% include nav.html %}
+                {%- include nav.html -%}
             </div>
             <span class="sidenav-trigger" onclick="openSidenav()">&#9776;</span>
         </div>
