--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -292,4 +292,17 @@ a.disabled {
 
 }
 
+h3, h4, h5, h6 {
+    font-weight: bold;
+}
+
+// Blogging 
+
+.meta {
+    font-size: 12px;
+}
+
+.grey-text {
+    color: #666666;
+}
 
