--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,8 +1,9 @@
-<html>
-    {% include head.html %}
+<!DOCTYPE html>
+<html lang="en-US">
+    {%- include head.html -%}
     
     <body>
-        {% include header.html %}
+        {%- include header.html -%}
         
         <main>
             <div class="container">
@@ -10,6 +11,6 @@
             </div>
         </main>
         
-        {% include footer.html %}
+        {%- include footer.html -%}
     </body>
 </html>
