--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -4,13 +4,14 @@
             <h1 class="logo left"><a href="/">Olivia</a></h1>
             <div id="sidenav" class="sidenav">
                 <a href="javascript:void(0)" class="close" onclick="closeSidenav()">&times;</a>
-                {%- include nav.html -%}
+                {{ partial "nav.html" . }}
             </div>
             <div class="topnav right">
-                {%- include nav.html -%}
+                {{ partial "nav.html" . }}
             </div>
             <span class="sidenav-trigger" onclick="openSidenav()">&#9776;</span>
         </div>
     </nav>
 </header>
+
 
