--- a/layouts/partials/toc.html
+++ b/layouts/partials/toc.html
@@ -1,6 +1,8 @@
 
 <div class="toc">
+    
     <h2>Table of contents</h2>
-    {{ .TableOfContents }}
+    
+    <div>{{ .Page.TableOfContents }}</div>
 </div>
 
