--- a/assets/scss/syntax.scss
+++ b/assets/scss/syntax.scss
@@ -1,4 +1,14 @@
-/* Background */ .chroma { background-color: #f8f8f8 }
+:not(pre) > code {
+    padding: 1px 5px;
+}
+
+pre {
+    padding: 8px 12px !important;
+    overflow-x: auto !important;
+}
+
+// Begin auto-generated 
+/* Background */ .chroma, pre, code { background-color: #eef; } // Modified: include pre, code
 /* Error */ .chroma .err {  }
 /* LineTableTD */ .chroma .lntd { vertical-align: top; padding: 0; margin: 0; border: 0; }
 /* LineTable */ .chroma .lntable { border-spacing: 0; padding: 0; margin: 0; border: 0; width: auto; overflow: auto; display: block; }
