--- a/layouts/404.html
+++ b/layouts/404.html
@@ -1,3 +1,4 @@
 {{ define "main"}}
-<h1 id="title"><a href="{{ "/" | relURL }}">Go home</a></h1>
+<h1 class="center-header">404: Not found</h1>
+<h3 class="center-header"><a href="{{ "/" | relURL }}">Go home</a></h3>
 {{ end }}
