--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -29,6 +29,11 @@ h1, h2, h3, h4, h5, h6, p, blockquote, pre, hr, ol, ul {
     }
 }
 
+.center-header {
+    text-align: center;
+    border-bottom: none !important;
+}
+
 body {
     font: 400 16px/1.5 -apple-system,BlinkMacSystemFont,
         "Segoe UI",Roboto,Helvetica,Arial,sans-serif,
