--- a/layouts/posts/single.html
+++ b/layouts/posts/single.html
@@ -3,18 +3,18 @@
 <h1>{{ .Title }}</h1>
 <span class="post-meta">Posted on {{ .Date.Format "January 2, 2006" }}</span>
 
-{{ if .Params.toc }}
+{{ if isset .Params "tags" }}
+    {{ partial "tags.html" .}}
+{{ end  }}
 
-    {{ partial "toc.html" . }}
-    <hr>
-
-{{ end }}
 {{ .Content }}
 
 {{ if not .Params.nocomments }}
     <div class="comments">
         <hr>
         <h2 style="padding-top: 20px !important;">Comments</h2>
+        <i><p>All comments posted either through utteranc.es or manually on the associated GitHub issue end up on an associated issue in the <a href="https://github.com/LunarWatcher/lunarwatcher.github.io">website GitHub repo</a>, and as such are required to follow the <a href="https://github.com/LunarWatcher/lunarwatcher.github.io/blob/source/.github/CODE_OF_CONDUCT.md">project code of conduct</a>. Remember to keep this in mind while posting a comment.</p></i>
+
         <script src="https://utteranc.es/client.js"
                 repo="LunarWatcher/lunarwatcher.github.io"
                 issue-term="pathname"
