--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -5,12 +5,32 @@
     
         {{ if .Params.toc }}
         <style>
-@media screen and (min-width: 1088px) {
 
+@media screen and (min-width: 1088px) {
     .toc h2 {
         border-bottom: none !important;
     }
+}
 
+@media screen and (min-width: 1212px) {
+    #content {
+        width: 73% !important; 
+        float: left !important;
+        padding: 2px;
+    }
+    .toc-container {
+        width: auto !important;
+        float: left !important;
+    }
+}
+@media screen and (max-width: 1211px) {
+    .toc-container {
+        float: none !important;
+        margin: 0 auto;
+    }
+}
+.toc-container {
+    padding: 10px;
 }
         </style>
         {{ end  }}
@@ -19,9 +39,17 @@
 
     <body>
         {{ partial "header.html" . }}
-
+   
+        
         <main>
-            <div class="container">
+            {{ if .Params.toc }}
+            <div class="toc-container">
+                {{ partial "toc.html" . }}
+
+            </div>
+            {{ end }}
+        
+            <div class="container" id="content">
                 {{ block "main" . }}
                 {{ end }}
             </div> 
