--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,3 +1,38 @@
 {{ define "main" }}
-<p>This rendering is proof Olivia screwed up somewhere. This should _never_ be run. Olivia, if you're reading this: fix your templates :')</p>
+
+<section id="list">
+
+    {{ $baseurl := .Site.BaseURL }}
+
+    {{ if and (eq .Data.Singular "tag") (not (eq .Title "Tags")) }}
+        <h2>#{{ .Title | lower }}</h2>
+    {{ else }}
+        <h2>{{ .Title }}</h2>
+    {{ end }}
+    {{ .Content }}
+
+    {{ range (.Paginate (.Data.Pages.GroupByDate "2006") 20).PageGroups  }}
+
+    <div class="posts">
+        {{ range .Pages }}
+        <div class="article">
+            <h1><a href="{{ .Permalink }}">{{ if .Draft }}{{ T "draft" }}: {{ end }}{{ .Title | markdownify }}</a></h1>
+            <time class="post-meta">{{ .Date.Format "January 2, 2006" }}</time>
+            {{ if .Params.Tags }}
+                {{ partial "tags.html" . }}
+            {{ end }}
+            <p>{{ .Summary }}</p>
+            <div>
+                <a href="{{ .RelPermalink }}">Read More...</a>
+            </div>
+        </div>
+        {{ end }}
+    </div>
+    
+    {{ end }}
+
+</section>
+
+{{ template "_internal/pagination.html" . }}
+
 {{ end }}
