--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -16,11 +16,14 @@
     #content {
         width: 73% !important; 
         float: left !important;
-        padding: 2px;
+        padding: 4px;
+        margin-left: 309px; /* Factors in the padding from .toc-container */
     }
     .toc-container {
-        width: auto !important;
+        width: 289px !important;
+        position: fixed;
         float: left !important;
+        height: 100%;
     }
 }
 @media screen and (max-width: 1211px) {
