Add one more article, split off annoying bugs linux edition into separate articles (the fuck was I thinking?)

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -23,6 +23,14 @@ h1, h2, h3, h4, h5, h6, p, blockquote, pre, hr, ol, ul {
     margin-bottom: 15px;
 }
 
+
+img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+
 .footer {
     * {
         margin-top: 15px;
