--- a/layouts/partials/socialmedia.html
+++ b/layouts/partials/socialmedia.html
@@ -1,9 +1,8 @@
 <ul>
-    <li><a href="//discord.gg/bjZD42j">Discord server</a></li>
+    <li><a href="//discord.gg/bJgdwZJYXY">Discord server</a></li>
     <li>Discord username: Olivia#0740</li>
     <li><a href="//twitter.com/OliviaZoe0">Twitter</a></li>
     <li><a href="//github.com/LunarWatcher">GitHub</a></li>
     <li><a href="//oliviazoe0.deviantart.com">DeviantArt</a></li>
-    <li><a href="mailto:zoe.i2k1@gmail.com">Email</a></li>
     <li><a href="//lunarwatcher.github.io/posts/feed.xml">Blog RSS feed</a></li>
 </ul>
